# mcp-proxy

./: .dockerignore  .gitignore  .gitmessage  .releaserc.json  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  HEADERS_TROUBLESHOOTING.md  ISSUE_53_FIX_SUMMARY.md  LICENSE  README.md  bridge_config_schema.json  codecov.yml  config.json  docker-compose.yml  fix_headers_issue.md  pyproject.toml  smithery.yaml
.github/: CODEOWNERS  dependabot.yml  labeler.yml  labels.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  release.md
.github/workflows/: cd.yaml  ci.yaml  dependabot.yml  main.yml  maintenance.yml  update-uv-lock.yml
docs/: README.md  api.md  architecture.md  configuration.md  deployment.md  installation.md  maintenance.md  releasing.md  troubleshooting.md
docs/auto-retry/: plan.md
docs/examples/: README.md  basic-config.json  development-config.json  docker-config.json  full-featured-config.json  minimal-config.json  production-config.json
src/mcp_foxxy_bridge/: __init__.py  __main__.py  bridge_server.py  config_loader.py  mcp_server.py  proxy_server.py  server_manager.py  sse_client.py  streamablehttp_client.py
src/mcp_proxy/: __init__.py  __main__.py  auth.py  config_loader.py  http_client.py  httpx_client.py  httpx_logging_patch.py  mcp_server.py  proxy_server.py  sse_client.py  sse_server.py  streamablehttp_client.py
tests/: test_auth_simple.py  test_cli_arguments.py  test_config_loader.py  test_http_client.py  test_httpx_client.py  test_mcp_server.py  test_proxy_server.py  test_retries.py  test_sse_server.py  test_stream_clients_reinit.py  test_streamablehttp_endpoints.py
